--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.font-yantra {
+  font-family: "Yantramanav", serif;
+}
+
+.font-instrument {
+  font-family: "Instrument Sans", serif;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
